# hermes

./: .env.example  .gitignore  .pnpmfile.cjs  AGENTS.md  CLAUDE.md  OPENRMF_MIGRATION.md  README.md  docker-compose.dev.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.js
.planning/: RESEARCH_VDA5050_OPENRMF.md  config.json
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
.taskmaster/: config.json  state.json
docker/: api-server-config.py  docker-compose.yml
docker/mock-adapter/: Dockerfile  mock_adapter.py
docs/: auth-spec.md  infrastructure-requirements.md  performance-benchmark-report.md  rosbridge-dependency-map.md  troubleshooting-backend.md  vda5050-integration.md
docs/adr/: 001-typescript-zustand-testing.md
electron/: main.js  preload.js
public/freebotics_description/meshes/: front_camera.STL  front_fork.STL  rear_wheel_left.STL
ros2/config/: mosquitto.conf  rmf_api_server.config.yaml  rmf_traffic_schedule.config.yaml  rosbridge.config.yaml  vda5050_connector.yaml
ros2/freebotics_rmf_adapter/: CMakeLists.txt  package.xml
ros2/freebotics_rmf_adapter/config/: freebotics.yaml
ros2/freebotics_rmf_adapter/launch/: adapter.launch.py
ros2/freebotics_rmf_adapter/src/: freebotics_fleet_adapter.cpp
ros2/launch/: hermes_backend.launch.py  hermes_sim.launch.py
scripts/: benchmark-threejs.js  build-linux.sh  install-vda5050.sh  setup-ros2-rmf.sh  simulate-vda5050-robot.sh  test-rmf-pipeline.sh  validate-sprint2.sh  validate-week1.sh  validate-week2.sh  validate-week3.sh  validate-week4.sh
src/: App.jsx  index.css
src/components/: CameraView.jsx  DashboardPanel.jsx  EStop.jsx  FleetSelector.jsx  Joystick.jsx  LogConsole.jsx  LogoUploader.jsx  Map3D.jsx  ModeSwitcher.jsx  NavigationControl.jsx  NotificationDisplay.jsx  Speedometer.jsx  Telemetry.jsx  VoltageChart.jsx
src/components/controls/: Joystick.jsx
src/components/display/: DashboardPanel.jsx  NotificationDisplay.jsx
src/components/fleet/: FleetSelector.jsx  LogoUploader.jsx
src/components/navigation/: Map3D.jsx
src/components/settings/: ConnectionSettings.jsx
src/components/tasks/: TaskCard.jsx  TaskList.jsx  TaskManager.jsx
src/context/: NotificationContext.jsx
src/hooks/: useExternalScript.js  useFleetState.js  useRMFApi.js  useRos.js
src/lib/: electronSettings.js  rmfClient.js
src/rmf/api/: rmfClient.js
src/store/: fleetStore.ts
src/test/: setup.ts
src/types/: index.ts  robot.ts  ros-legacy.d.ts
src/utils/: SimpleTfGraph.js  amclHelper.js
(+8 files in other folders)
